# SceneLib2

data/: SceneLib2.cfg
scenelib2/: CMakeLists.txt
scenelib2/framegrabber/: usbcamgrabber.cpp  usbcamgrabber.h
